tests/paczka1/fuzzy1/31842932.err
Error in line 2: Y7X8rr A328 21,8
Error in line 8: QV64W9V S523 66,0
Error in line 11: O4o2 A106 85,2
